# rosinljubljana

./: .gitignore  README.md  cpp_helper.txt  rosin_helper.txt
fanuc_ros/src/camera_exercise/: CMakeLists.txt  package.xml
fanuc_ros/src/camera_exercise/cfg/: Green.cfg
fanuc_ros/src/camera_exercise/launch/: camera.launch
fanuc_ros/src/camera_exercise/src/: image_processing.cpp
fanuc_ros/src/camera_exercise/urdf/: box.urdf  camera.xacro
fanuc_ros/src/fanuc_driver/tpe/: ros.ls  ros_movesm.ls  rosrelay.ls  rosstate.ls
fanuc_ros/src/fanuc_lrmate200id_educell/: CMakeLists.txt  package.xml  readme.md
fanuc_ros/src/fanuc_lrmate200id_educell/config/: fanuc_lrmate200id.srdf  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml
fanuc_ros/src/fanuc_lrmate200id_educell/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  fanuc_lrmate200id_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
fanuc_ros/src/fanuc_lrmate200id_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
fanuc_ros/src/fanuc_lrmate200id_moveit_config/config/: fake_controllers.yaml  fanuc_lrmate200id.srdf  kinematics.yaml  ompl_planning.yaml  (+1 more)
fanuc_ros/src/fanuc_lrmate200id_moveit_config_real/: .setup_assistant  package.xml
fanuc_ros/src/fanuc_lrmate200id_support/: package.xml  readme.md
fanuc_ros/src/fanuc_manipulation/: CMakeLists.txt  package.xml
fanuc_ros/src/fanuc_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
fanuc_ros/src/fanuc_rosinljubljana/: CMakeLists.txt  package.xml
fanuc_ros/src/gripper_controller/: CMakeLists.txt  package.xml
fanuc_ros/src/gripper_controller/src/: gripper_node.cpp  gripper_test.cpp
fanuc_ros/src/manipulation/: CMakeLists.txt  package.xml
fanuc_ros/src/schunk_gripper_controller/: CMakeLists.txt  package.xml
fanuc_ros/src/urdf_exercise/: CMakeLists.txt  package.xml
rosbot_core/: platformio.ini
rosbot_core/src/: main.cpp
rosbot_ros/src/rosbot/: CMakeLists.txt  package.xml
(+279 files in other folders)
